upgrade with session template
