# src/authentication/authentication.controller.ts
@@ -1,19 +1,22 @@
 import bcrypt from "bcrypt";
-import { Router, Request, Response, NextFunction } from "express";
-import jwt from "jsonwebtoken";
+import { NextFunction, Request, Response, Router } from "express";
+import { OAuth2Client } from "google-auth-library";
+import { Schema } from "mongoose";
+
+import HttpException from "../exceptions/HttpException";
 import UserWithThatEmailAlreadyExistsException from "../exceptions/UserWithThatEmailAlreadyExistsException";
 import WrongCredentialsException from "../exceptions/WrongCredentialsException";
-import HttpException from "../exceptions/HttpException";
-import Controller from "../interfaces/controller.interface";
-import DataStoredInToken from "../interfaces/dataStoredInToken";
-import TokenData from "../interfaces/tokenData.interface";
+import IController from "../interfaces/controller.interface";
+import IGoogleUserInfo from "../interfaces/googleUserInfo.interface";
+import IRequestWithUser from "../interfaces/requestWithUser.interface";
+import ISession from "../interfaces/session.interface";
 import validationMiddleware from "../middleware/validation.middleware";
-import User from "../user/user.interface";
-import userModel from "./../user/user.model";
 import CreateUserDto from "../user/user.dto";
+import IUser from "../user/user.interface";
+import userModel from "../user/user.model";
 import LogInDto from "./logIn.dto";
 
-export default class AuthenticationController implements Controller {
+export default class AuthenticationController implements IController {
     public path = "/auth";
     public router = Router();
     private user = userModel;
@@ -24,16 +27,19 @@ export default class AuthenticationController implements Controller {
 
     private initializeRoutes() {
         this.router.get("/", (req: Request, res: Response) => {
-            res.send("Építményadó backend API - Swagger: <a href='https://epitmenyado.cyclic.app/docs'>https://epitmenyado.cyclic.app/docs</a>");
+            res.send("Jedlik-Express-Mongoose-TS-Session-Backend API - Swagger: <a href='https://jedliksession.cyclic.app/docs'>https://jedliksession.cyclic.app/docs</a>");
         });
         this.router.post(`${this.path}/register`, validationMiddleware(CreateUserDto), this.registration);
-        this.router.post(`${this.path}/login`, validationMiddleware(LogInDto), this.loggingIn);
-        this.router.post(`${this.path}/logout`, this.loggingOut);
+        this.router.post(`${this.path}/login`, validationMiddleware(LogInDto), this.login);
+        this.router.post(`${this.path}/autologin`, this.autoLogin);
+        this.router.post(`${this.path}/closeapp`, this.closeApp);
+        this.router.post(`${this.path}/logout`, this.logout);
+        this.router.post(`${this.path}/google`, this.loginAndRegisterWithGoogle);
     }
 
     private registration = async (req: Request, res: Response, next: NextFunction) => {
         try {
-            const userData: User = req.body;
+            const userData: IUser = req.body;
             if (await this.user.findOne({ email: userData.email })) {
                 next(new UserWithThatEmailAlreadyExistsException(userData.email));
             } else {
@@ -44,9 +50,16 @@ export default class AuthenticationController implements Controller {
                     password: hashedPassword,
                 });
                 user.password = undefined;
-                const tokenData: TokenData = this.createToken(user);
-                res.cookie("Authorization", tokenData.token, { maxAge: tokenData.expiresIn, path: "/", secure: true, sameSite: "none", httpOnly: true });
-                // res.setHeader("Set-Cookie", [this.createCookie(tokenData)]);
+                req.session.regenerate(error => {
+                    if (error) {
+                        next(new HttpException(400, error.message)); // to do
+                    }
+                    console.log("regenerate ok");
+                    (req.session as ISession).user_id = user._id as Schema.Types.ObjectId;
+                    (req.session as ISession).user_email = user.email as string;
+                    (req.session as ISession).isLoggedIn = true;
+                    (req.session as ISession).isAutoLogin = user.auto_login;
+                });
                 res.send(user);
             }
         } catch (error) {
@@ -54,47 +67,143 @@ export default class AuthenticationController implements Controller {
         }
     };
 
-    private loggingIn = async (req: Request, res: Response, next: NextFunction) => {
+    private autoLogin = async (req: IRequestWithUser, res: Response, next: NextFunction) => {
+        if (req.session.id && (req.session as ISession).isAutoLogin) {
+            const user: IUser = await userModel.findById((req.session as ISession).user_id);
+            if (user) {
+                (req.session as ISession).isLoggedIn = true;
+                res.send(user);
+            } else {
+                next(new HttpException(404, "Please log in!"));
+            }
+            // req.sessionStore.get(req.session.id, (error, s: ISession) => {
+            //     if (error || !s.user_email) {
+            //         next(new HttpException(404, "Please log in!"));
+            //     }
+            //     if (user && s.user_email) {
+            //         (req.session as ISession).isLoggedIn = true;
+            //         res.send(user);
+            //     }
+            // });
+        } else {
+            next(new HttpException(404, "Please log in!"));
+        }
+    };
+
+    private login = async (req: Request, res: Response, next: NextFunction) => {
         try {
-            const logInData: User = req.body;
+            const logInData: IUser = req.body;
             const user = await this.user.findOne({ email: logInData.email });
             if (user) {
                 const isPasswordMatching = await bcrypt.compare(logInData.password, user.password);
                 if (isPasswordMatching) {
                     user.password = undefined;
-                    const tokenData = this.createToken(user);
-                    // res.setHeader("Set-Cookie", [this.createCookie(tokenData)]);
-                    res.cookie("Authorization", tokenData.token, { maxAge: tokenData.expiresIn, path: "/", secure: true, sameSite: "none", httpOnly: true });
-                    res.send(user);
+                    req.session.regenerate(error => {
+                        if (error) {
+                            next(new HttpException(400, error.message)); // to do
+                        }
+                        console.log("regenerate ok");
+                        (req.session as ISession).user_id = user._id as Schema.Types.ObjectId;
+                        (req.session as ISession).user_email = user.email;
+                        (req.session as ISession).isLoggedIn = true;
+                        (req.session as ISession).isAutoLogin = user.auto_login;
+                        res.send(user);
+                    });
                 } else {
                     next(new WrongCredentialsException());
                 }
             } else {
                 next(new WrongCredentialsException());
             }
-        } catch (error) {
+        } catch (error: any) {
             next(new HttpException(400, error.message));
         }
     };
 
-    private loggingOut = (req: Request, res: Response) => {
-        // res.setHeader("Set-Cookie", ["Authorization=; SameSite=None; httpOnly; Secure; Path=/; Max-age=1"]);
-        res.cookie("Authorization", "", { maxAge: 1, path: "/", secure: true, sameSite: "none", httpOnly: true });
+    private closeApp = (req: Request, res: Response) => {
+        if (req.session.id && (req.session as ISession).isAutoLogin) {
+            (req.session as ISession).isLoggedIn = false;
+            res.sendStatus(200);
+        } else this.logout(req, res);
+    };
+
+    private logout = (req: Request, res: Response) => {
+        if (req.session.cookie) {
+            // Clear session cookie on client:
+            res.cookie("connect.sid", null, {
+                httpOnly: true,
+                secure: true,
+                sameSite: "none",
+                maxAge: 1,
+            });
+            // Delete session document from MongoDB:
+            req.session.destroy(err => {
+                if (err) {
+                    console.log("Error at destroyed session");
+                } else {
+                    console.log("Session is destroyed!");
+                }
+            });
+        }
         res.sendStatus(200);
     };
 
-    // private createCookie(tokenData: TokenData) {
-    //     return `Authorization=${tokenData.token}; SameSite=None; httpOnly; Secure; Path=/; Max-Age=${tokenData.expiresIn}`;
-    // }
+    private loginAndRegisterWithGoogle = async (req: Request, res: Response, next: NextFunction) => {
+        try {
+            const client: OAuth2Client = new OAuth2Client();
+            const verifyToken = async (token: string) => {
+                client.setCredentials({ access_token: token });
+                const userinfo = await client.request({
+                    url: "https://www.googleapis.com/oauth2/v3/userinfo",
+                });
+                return userinfo.data;
+            };
 
-    private createToken(user: User): TokenData {
-        const expiresIn = 24 * 60 * 60; // 1 day
-        const dataStoredInToken: DataStoredInToken = {
-            _id: user._id.toString(),
-        };
-        return {
-            expiresIn,
-            token: jwt.sign(dataStoredInToken, process.env.JWT_SECRET, { expiresIn }),
-        };
-    }
+            verifyToken(req.body.atoken)
+                .then(userInfo => {
+                    const googleUser = userInfo as IGoogleUserInfo;
+                    this.user.findOne({ email: googleUser.email }).then(user => {
+                        if (user) {
+                            req.session.regenerate(error => {
+                                if (error) {
+                                    next(new HttpException(400, error.message)); // to do
+                                }
+                                console.log("regenerate ok");
+                                (req.session as ISession).user_id = user._id as Schema.Types.ObjectId;
+                                (req.session as ISession).user_email = user.email as string;
+                                (req.session as ISession).isLoggedIn = true;
+                                (req.session as ISession).isAutoLogin = user.auto_login;
+                                res.send(user);
+                            });
+                        } else {
+                            // Register as new Google user
+                            this.user
+                                .create({
+                                    ...googleUser,
+                                    password: "stored at Google",
+                                    auto_login: true,
+                                    roles: ["admin"],
+                                })
+                                .then(user => {
+                                    req.session.regenerate(error => {
+                                        if (error) {
+                                            next(new HttpException(400, error.message)); // to do
+                                        }
+                                        (req.session as ISession).user_id = user._id as Schema.Types.ObjectId;
+                                        (req.session as ISession).user_email = user.email as string;
+                                        (req.session as ISession).isLoggedIn = true;
+                                        (req.session as ISession).isAutoLogin = user.auto_login;
+                                        res.send(user);
+                                    });
+                                });
+                        }
+                    });
+                })
+                .catch(() => {
+                    next(new WrongCredentialsException());
+                });
+        } catch (error) {
+            next(new HttpException(400, error.message));
+        }
+    };
 }
