# src/swagger.json
@@ -7,13 +7,126 @@
     },
     "servers": [
         {
-            "url": "https://epitmenyado.cyclic.app"
+            "url": "http://localhost:5000"
         },
         {
-            "url": "http://localhost:5000"
+            "url": "https://epitmenyado.cyclic.app"
         }
     ],
     "paths": {
+        "/auth/login": {
+            "post": {
+                "tags": ["authentication"],
+                "summary": "Bejelentkezés",
+                "description": "Bejelentkezés a megadott felhasználói adatokkal.",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "password": {
+                                        "type": "string"
+                                    }
+                                }
+                            },
+                            "example": {
+                                "email": "student001@jedlik.eu",
+                                "password": "student001"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/user"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "status": {
+                                            "type": "number",
+                                            "example": 401
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Wrong credentials provided"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/logout": {
+            "post": {
+                "tags": ["authentication"],
+                "summary": "Kijelentkezés",
+                "description": "Kijelentkezés. Kliens süti-token érvénytelenítése.",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/auth/register": {
+            "post": {
+                "tags": ["authentication"],
+                "summary": "Regisztráció",
+                "description": "Regisztráció a megadott adattokkal.",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "$ref": "#/components/schemas/user"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "OK (Az új, elmentett felhasználó adataival tér vissza.)",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "$ref": "#/components/schemas/user"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/ErrorSchema"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/adosavok": {
             "get": {
                 "tags": ["adosavok"],
@@ -38,13 +151,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "error.message"
-                                        }
-                                    }
+                                    "$ref": "#/components/schemas/ErrorSchema"
                                 }
                             }
                         }
@@ -82,13 +189,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "error.message"
-                                        }
-                                    }
+                                    "$ref": "#/components/schemas/ErrorSchema"
                                 }
                             }
                         }
@@ -130,13 +231,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "error.message"
-                                        }
-                                    }
+                                    "$ref": "#/components/schemas/ErrorSchema"
                                 }
                             }
                         }
@@ -368,13 +463,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "error.message"
-                                        }
-                                    }
+                                    "$ref": "#/components/schemas/ErrorSchema"
                                 }
                             }
                         }
@@ -422,13 +511,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "error.message"
-                                        }
-                                    }
+                                    "$ref": "#/components/schemas/ErrorSchema"
                                 }
                             }
                         }
@@ -466,13 +549,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "error.message"
-                                        }
-                                    }
+                                    "$ref": "#/components/schemas/ErrorSchema"
                                 }
                             }
                         }
@@ -514,13 +591,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "error.message"
-                                        }
-                                    }
+                                    "$ref": "#/components/schemas/ErrorSchema"
                                 }
                             }
                         }
@@ -738,13 +809,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "error.message"
-                                        }
-                                    }
+                                    "$ref": "#/components/schemas/ErrorSchema"
                                 }
                             }
                         }
@@ -788,13 +853,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "error.message"
-                                        }
-                                    }
+                                    "$ref": "#/components/schemas/ErrorSchema"
                                 }
                             }
                         }
@@ -869,13 +928,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "error.message"
-                                        }
-                                    }
+                                    "$ref": "#/components/schemas/ErrorSchema"
                                 }
                             }
                         }
@@ -960,13 +1013,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "type": "object",
-                                    "properties": {
-                                        "message": {
-                                            "type": "string",
-                                            "example": "error.message"
-                                        }
-                                    }
+                                    "$ref": "#/components/schemas/ErrorSchema"
                                 }
                             }
                         }
@@ -1042,6 +1089,11 @@
             "address": {
                 "type": "object",
                 "properties": {
+                    "_id": {
+                        "type": "string",
+                        "description": "A beágyazott cím objektum azonosítója (ObjectID). Opcionális.",
+                        "example": "61b5f0c1f39e4edcf5b8a3d9"
+                    },
                     "street": {
                         "type": "string",
                         "description": "A közterület neve és száma.",
@@ -1083,11 +1135,30 @@
                         "description": "A felhasználó jelszavához tartozó hash-kód.",
                         "example": "$2b$10$HBH36EkxhwwOcI7UM/Km3uHUcgwPJjleZYS9fqOgjIr.qmvTUlGPu"
                     },
+                    "auto_login": {
+                        "type": "boolean",
+                        "description": "Auto login szolgáltatás jelzése.",
+                        "example": true
+                    },
                     "address": {
                         "type": "object",
                         "$ref": "#/components/schemas/address",
                         "description": "A felhasználó lakcíme.",
                         "example": true
+                        
+                    }
+                }
+            },
+            "ErrorSchema": {
+                "type": "object",
+                "properties": {
+                    "message": {
+                        "type": "string",
+                        "example": "error.message value"
+                    },
+                    "status": {
+                        "type": "integer",
+                        "example": 400
                     }
                 }
             }
